<resources>
    <string name="app_name">2019_paper_a</string>
    <string name="movie_default_img">movie_default_img</string>
    <string name="movie_name">Movie Name</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="movie_year">Movie Year</string>
    <string name="add">add</string>
    <string name="textview">TextView</string>
    <string name="rate">Rate</string>
    <string name="comments">Comments</string>
    <string name="_0">0</string>
    <string name="current_rating">Current Rating</string>
</resources>